force-app/main/default/objects/Contract/fields/Contracted_Monthly_Hours__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Monthly_Hours__c</fullName>
    <description>Contracted Monthly Hours</description>
    <label>Contracted Monthly Hours</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>