force-app/main/default/objects/Contract/fields/ContractedHours__c.field-meta.xml
<CustomField>
    <fullName>ContractedHours__c</fullName>
    <label>Contracted Hours (Total)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>