force-app/main/default/objects/Contract/fields/ReasonForTermination__c.field-meta.xml
<CustomField>
    <fullName>ReasonForTermination__c</fullName>
    <description>Reasons for contract termination</description>
    <label>Reason For Termination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Budget Review</fullName>
            </value>
            <value>
                <fullName>Churn</fullName>
            </value>
            <value>
                <fullName>Payment Issues</fullName>
            </value>
            <value>
                <fullName>Unsatisfaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>