force-app/main/default/objects/Contract/recordTypes/Incidents.recordType-meta.xml
<RecordType>
    <fullName>Incidents</fullName>
    <active>true</active>
    <description>Cases that are an unplanned interruption to a service, or reduction in the quality of a service</description>
    <label>Incidents</label>
</RecordType>